--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,6 +1,7 @@
 database.url=jdbc:hsqldb:mem:graduate
 database.username=sa
 database.password=
+database.driverClassName=org.hsqldb.jdbcDriver
 
 database.init=true
 jdbc.initLocation=classpath:db/initDB_hsql.sql
