dev 4_0 add_junit

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <spring.version>5.2.0.RELEASE</spring.version>
+        <junit.version>4.12</junit.version>
 
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
@@ -94,6 +95,15 @@
             <artifactId>hsqldb</artifactId>
             <version>2.5.0</version>
         </dependency>
+
+        <!--Test-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <profiles>
