dev 5_2 add_jpa_user_repo

--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,7 @@
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
             <version>2.5.0</version>
+            <scope>runtime</scope>
         </dependency>
 
         <!--Test-->
