--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -1,4 +1,5 @@
-database.url=jdbc:hsqldb:mem:graduate
+#https://www.baeldung.com/spring-boot-hsqldb
+database.url=jdbc:hsqldb:mem:graduate; DB_CLOSE_DELAY=-1
 database.username=sa
 database.password=
 database.driverClassName=org.hsqldb.jdbcDriver
