--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
         <spring.version>5.2.0.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
+        <junit.jupiter.version>5.6.1</junit.jupiter.version>
 
         <!-- Logging -->
         <logback.version>1.2.3</logback.version>
@@ -113,6 +114,12 @@
         </dependency>
 
         <!--Test-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
