dev 5_7 fix_db_init_and_tests

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pro.paullezin</groupId>
     <artifactId>graduate</artifactId>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <name>Restaurant Rating</name>
