--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pro.paullezin</groupId>
     <artifactId>graduate</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
 
     <name>Restaurant Rating</name>
@@ -17,6 +17,7 @@
 
         <spring.version>5.2.5.RELEASE</spring.version>
         <spring-data-jpa.version>2.2.6.RELEASE</spring-data-jpa.version>
+        <tomcat.version>9.0.31</tomcat.version>
 
         <!-- Tests -->
         <junit.version>4.12</junit.version>
@@ -129,16 +130,15 @@
 
         <!--Web-->
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.1</version>
+            <groupId>org.apache.tomcat</groupId>
+            <artifactId>tomcat-servlet-api</artifactId>
+            <version>${tomcat.version}</version>
             <scope>provided</scope>
         </dependency>
-
         <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.2.5.RELEASE</version>
         </dependency>
 
         <!--DataBase-->
